Refactoring, adding password-change functionality

--- a/.env
+++ b/.env
@@ -4,5 +4,10 @@ DATABASE='mongodb://localhost:27017/FittsExperiment'
 SERVER_PORT=3000
 AUTH_PORT=4000
 CORS_ORIGIN='http://localhost:4200'
-TOKEN_EXPIRATION_TIME='1200s'
+ACCESS_TOKEN_EXPIRATION_TIME='1200s'
+REFRESH_TOKEN_EXPIRATION_TIME='1d'
+SALT_ROUNDS=10
+```
+```
+
 ```
