Adding Result model and major refactoring.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fitts-experiment-svc",
   "version": "1.0.0",
+  "type": "module",
   "description": "Backend for the Fitts experiment web-application",
   "main": "server.js",
   "scripts": {
