--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@ DATABASE='mongodb://localhost:27017/FittsExperiment'
 SERVER_PORT=3000
 AUTH_PORT=4000
 CORS_ORIGIN='http://localhost:4200'
-ACCESS_TOKEN_EXPIRATION_TIME='1200s'
+#TODO: change to actual expiration times
+ACCESS_TOKEN_EXPIRATION_TIME='12000s'
 REFRESH_TOKEN_EXPIRATION_TIME='1d'
 SALT_ROUNDS=10
 ```
