--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
-    "passport": "^0.6.0"
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "sharp": "^0.32.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
