--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "author": "Bori Varga",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^5.3.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "csv-stringify": "^6.3.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
