--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.1",
-    "multer": "^1.4.5-lts.1",
-    "passport": "^0.6.0",
-    "sharp": "^0.32.0"
+    "mongoose": "^6.9.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
